outputs to tables, corrected hq icon spacing

--- a/less/styles.less
+++ b/less/styles.less
@@ -197,7 +197,7 @@ table {
 .prefix-hq-icon_alt {
     margin-top: 5px;
     margin-left: 35%;
-    margin-right: -20%;
+    margin-right: -5%;
     height: 16px;
     width: 16px;
 }
